--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -72,7 +72,7 @@
   </head>
   <body class="text-center">
     <main class="form-signin">
-      <form>
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <img
           class="mb-4"
           src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg"
@@ -85,19 +85,38 @@
         <div class="form-floating">
           <input
             type="email"
-            class="form-control"
             id="floatingInput"
             placeholder="name@example.com"
+            formControlName="email"
+            class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
           />
+          <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">Email is required</div>
+            <div *ngIf="f.email.errors.email">
+              Email must be a valid email address
+            </div>
+          </div>
+
           <label for="floatingInput">Email address</label>
         </div>
         <div class="form-floating">
           <input
-            type="password"
-            class="form-control"
-            id="floatingPassword"
-            placeholder="Password"
+            
           />
+          <input
+          type="password"
+          class="form-control"
+          id="floatingPassword"
+          placeholder="Password"formControlName="password"
+            [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+          />
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.required">Password is required</div>
+            <div *ngIf="f.password.errors.minlength">
+              Password must be at least 6 characters
+            </div>
+          </div>
           <label for="floatingPassword">Password</label>
         </div>
 
