--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -102,13 +102,11 @@
         </div>
         <div class="form-floating">
           <input
-            
-          />
-          <input
-          type="password"
-          class="form-control"
-          id="floatingPassword"
-          placeholder="Password"formControlName="password"
+            type="password"
+            class="form-control"
+            id="floatingPassword"
+            placeholder="Password"
+            formControlName="password"
             [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
           />
           <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
@@ -128,7 +126,7 @@
         <button class="w-100 btn btn-lg btn-primary" type="submit">
           Sign in
         </button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+        <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
       </form>
     </main>
   </body>
